--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "trix": "^1.0.0",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "vue": "^2.6.10",
+    "vue-loader": "^15.7.1",
+    "vue-template-compiler": "^2.6.10"
   },
   "version": "0.1.0",
   "devDependencies": {
