--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
+    "sweetalert2": "^8.18.3",
     "trix": "^1.0.0",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.10",
