--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "trix": "^1.0.0",
     "turbolinks": "^5.2.0",
     "vue": "^2.6.10",
+    "vue-cropperjs": "^4.0.0",
     "vue-loader": "^15.7.1",
     "vue-template-compiler": "^2.6.10"
   },
