--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,10 @@
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
+# rubocop設定ファイル
+.rubocop.yml
+.rubocop_todo.yml
+
 vendor/bundle
 
 /public/packs
