--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "ress": "^2.0.1",
+    "selectize": "^0.12.6",
     "sweetalert2": "^8.18.3",
     "trix": "^1.0.0",
     "turbolinks": "^5.2.0",
